Updated swagger for updated homepage
